@@ -1,3 +1,8 @@
+2003-10-10  Mikhael Goikhman  <migo@homemail.com>
+
+	* NEWS:
+	documented fvwm-menu-headlines changes
+
 2003-09-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/virtual.c (MoveViewport):
